improve bus test coverage, tidy up some test code, samll refeactoring on route matrix route